# karver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  karver.cabal
src/Text/: Karver.hs
src/Text/Karver/: Parse.hs  Types.hs
test/Text/: KarverSpec.hs
test/Text/Karver/: ParseSpec.hs  TypesSpec.hs
test/json/: test-data.json
test/template/: template.html  text.html
